--- a/src/main/resources/templates/categories/list.html
+++ b/src/main/resources/templates/categories/list.html
@@ -97,7 +97,7 @@
                 <p class="mb-4 text-gray-700">Are you sure you want to delete <span id="deleteName" class="font-semibold"></span>?</p>
                 <form class="space-y-5" th:action="@{/admin/categories/{id}/delete(id=${category.id})}" th:object="${category}" method="post">
                     <input type="hidden" name="_method" value="delete"/>
-                    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+                    <input type="hidden" th:name="${_csrf?.parameterName}" th:value="${_csrf?.token}"/>
                     <input type="hidden" th:name="id" th:field="*{id}"/>
                     <div class="flex justify-end space-x-3 pt-2">
                         <button type="button" id="closeDeleteModalBtn" class="bg-gray-500 hover:bg-gray-600 text-white font-medium py-2 px-5 rounded-lg shadow-sm transition">Cancel</button>
